[gd_scene load_steps=8 format=3 uid="uid://drq34c8pcvue4"]

[ext_resource type="Shader" path="res://assets/Shaders/PlayerEditor.gdshader" id="1_431hm"]
[ext_resource type="Script" path="res://ui/PlayerEditor.gd" id="1_g6a8t"]
[ext_resource type="Texture2D" uid="uid://cf73l1r3eo7rj" path="res://assets/Tanks/Hulls/Cronus.png" id="1_tm475"]
[ext_resource type="Texture2D" uid="uid://cejhcfgshnvsc" path="res://assets/Tanks/Paint/Camo_01.png" id="2_k74nh"]
[ext_resource type="Texture2D" uid="uid://bfujkakjyuu8m" path="res://assets/Tanks/Paint/Camo_00.png" id="5_5xx2x"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_w5bac"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_j4wmt"]
shader = ExtResource("1_431hm")
shader_parameter/selected_color_1 = Color(0.490196, 0.188235, 0, 1)
shader_parameter/selected_color_2 = Color(0.85098, 0.682353, 0.109804, 1)
shader_parameter/selected_color_3 = Color(0.215686, 0.356863, 0, 1)
shader_parameter/selected_texture = ExtResource("2_k74nh")

[node name="PlayerEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g6a8t")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_w5bac")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.145098, 0.188235, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
alignment = 2

[node name="Preview" type="Sprite2D" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_j4wmt")
position = Vector2(368, 304)
scale = Vector2(8, 8)
texture = ExtResource("1_tm475")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="MaterialSelector" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Material1Btn" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/MaterialSelector"]
unique_name_in_owner = true
modulate = Color(1, 0.976471, 1, 1)
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
texture_normal = ExtResource("5_5xx2x")
stretch_mode = 0

[node name="Material2Btn" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/MaterialSelector"]
unique_name_in_owner = true
modulate = Color(1, 0.976471, 1, 1)
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
texture_normal = ExtResource("2_k74nh")
stretch_mode = 0

[node name="ColorSlector" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Color3Btn" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/ColorSlector"]
unique_name_in_owner = true
modulate = Color(1, 0.976471, 1, 1)
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture_normal = ExtResource("5_5xx2x")
stretch_mode = 0

[node name="Color2Btn" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/ColorSlector"]
unique_name_in_owner = true
modulate = Color(1, 0.976471, 1, 1)
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture_normal = ExtResource("5_5xx2x")
stretch_mode = 0

[node name="Color1Btn" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/ColorSlector"]
unique_name_in_owner = true
modulate = Color(1, 0.976471, 1, 1)
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture_normal = ExtResource("5_5xx2x")
stretch_mode = 0

[node name="VSeparator2" type="VSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="ColorPicker" type="ColorPicker" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1
color = Color(0.301961, 0.501961, 0.2, 1)
edit_alpha = false
picker_shape = 2
presets_visible = false

[node name="NavigationButtons" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="Button" type="Button" parent="MarginContainer/NavigationButtons"]
layout_mode = 2
text = "Save
"

[node name="Button2" type="Button" parent="MarginContainer/NavigationButtons"]
layout_mode = 2
text = "Return
"
